<resources>
    <string name="app_name">AR Track Visualizer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_camera">CameraActivity</string>

    <string name="latitude">Latittude</string>
    <string name="longitude">Longitude</string>
    <string name="altitude">Altitude</string>
    <string name="number_of_points">Number of points</string>
    <string name="length_of_track">Length of track</string>
    <string name="refresh">Refresh</string>

    <string name="show_ar">Show AR</string>

    <string name="terrain_map">Terrain map</string>
    <string name="point_mode">Point-only mode</string>
    <string name="clear_points">Clear points</string>

    <string name="no_points">Select some points on the map first!</string>
    <string name="hold_steady">Hold the phone steady</string>
    <string name="marker_title">Point no. %1$s</string>
    <string name="start">Start</string>

    <string name="tab_home">Overview</string>
    <string name="tab_map">Map</string>

    <string name="change_language">Change language...</string>
    <string name="czech">Czech</string>
    <string name="english">English</string>
    <string name="select_language">Select your language</string>
    <string name="show_accuracy">Show accuracy</string>
    <string name="grant_permissions">You have to grant permissions before using this app!</string>
    <string name="permissions_not_granted">Permissions not granted!</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="choose_data_source">Choose data source</string>
    <string name="data_source">Data source...</string>
    <string name="google_data">Google</string>
    <string name="offline_data">Offline data</string>
    <string name="czechia">EUDEM Czechia</string>
    <string name="taiwan">AsterGDEM Taiwan</string>
    <string name="temporary_mode">Data source will change when ready</string>
    <string name="downloading_elevation">Downloading elevation data</string>
    <string name="download_in_progress">Download in progress</string>
    <string name="download_finished">Download finished</string>
    <string name="cancel_download">Do you want to cancel the download?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="download_error">Error while downloading data</string>
    <string name="extracting_error">Error while extracting data. Not enough space?</string>
    <string name="accuracy">Accuracy</string>
    <string name="marker_snippet" translatable="false">%.1f m</string>
    <string name="marker_snippet_accuracy" translatable="false">%.1f m, %.1f m</string>
    <string name="remove_marker">Remove selected point?</string>
    <string name="about">About</string>
    <string name="about_author">Vladímir Tichý, 2016</string>
    <string name="about_bp">This application was developed as part of my bachelor thesis.</string>
    <string name="about_copyright" translatable="false">Produced using Copernicus data and information funded by the European Union - EU-DEM layers.</string>
</resources>
