<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_terrain_map"
        android:checkable="true"
        android:orderInCategory="0"
        android:title="@string/terrain_map"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_point_mode"
        android:checkable="true"
        android:orderInCategory="1"
        android:title="@string/point_mode"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_show_accuracy"
        android:checkable="true"
        android:orderInCategory="2"
        android:title="@string/show_accuracy"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_clear"
        android:orderInCategory="3"
        android:title="@string/clear_points"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_load_data"
        android:orderInCategory="4"
        android:title="@string/data_source"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_change_language"
        android:orderInCategory="5"
        android:title="@string/change_language"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:orderInCategory="6"
        android:title="@string/about"
        app:showAsAction="never" />

</menu>
