<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="420dp"
        android:orientation="vertical"
        android:stretchColumns="1">

        <TableRow>

            <TextView
                android:padding="10dp"
                android:text="@string/latitude" />

            <TextView
                android:id="@+id/tv_latitude"
                android:gravity="end"
                android:padding="10dp"
                android:text="--" />
        </TableRow>

        <TableRow>

            <TextView
                android:padding="10dp"
                android:text="@string/longitude" />

            <TextView
                android:id="@+id/tv_longitude"
                android:gravity="end"
                android:padding="10dp"
                android:text="--" />
        </TableRow>

        <TableRow>

            <TextView
                android:padding="10dp"
                android:text="@string/altitude" />

            <TextView
                android:id="@+id/tv_elevation"
                android:gravity="end"
                android:padding="10dp"
                android:text="--" />
        </TableRow>

        <TableRow>

            <TextView
                android:padding="10dp"
                android:text="@string/accuracy" />

            <TextView
                android:id="@+id/tv_accuracy"
                android:gravity="end"
                android:padding="10dp"
                android:text="--" />
        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/dividerVertical" />

        <Button
            android:id="@+id/button_refresh_overview"
            style="?attr/borderlessButtonStyle"
            android:layout_marginBottom="-6dp"
            android:layout_marginTop="-6dp"
            android:text="@string/refresh"
            android:textAllCaps="true" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/dividerVertical" />

        <TableRow>

            <TextView
                android:padding="10dp"
                android:text="@string/number_of_points" />

            <TextView
                android:id="@+id/tv_number_of_points"
                android:gravity="end"
                android:padding="10dp"
                android:text="--" />
        </TableRow>

        <TableRow>

            <TextView
                android:padding="10dp"
                android:text="@string/length_of_track" />

            <TextView
                android:id="@+id/tv_distance"
                android:gravity="end"
                android:padding="10dp"
                android:text="--" />
        </TableRow>

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/chart"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight="1" />

    </TableLayout>


</ScrollView>